--- a/project_DAlbas/app_DAlbas/templates/encabezado.html
+++ b/project_DAlbas/app_DAlbas/templates/encabezado.html
@@ -8,6 +8,7 @@
   <a href="/vistaInicioNosotros/">Acerca de</a>
   <a href="/vistaInicioProductos/">Productos</a>
   <a href="/vistaManual/">Manuales</a>
+  <a href="#" id="app-link"  data-bs-toggle="modal" data-bs-target="#modalApp">App</a>
 </nav>
 
 <!-- iconos -->
@@ -24,3 +25,6 @@
   <input type="search" id="search-box" placeholder="buscar aquí...">
   <label for="search-box" class="fas fa-search"></label>
 </form>
+
+
+
